updated title and meta data

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <title>portfolio</title>
+  <title>Elyse Voegeli</title>
+   <meta content="I am a designer and data analyst committed to making tech accessible, accountable, and delightful." name="description">
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="https://unpkg.com/feather-icons"></script>
