updated code enforcement

--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -170,6 +170,19 @@
     </div>
 
 
+        <div class="row description_section">
+          <div class="col"></div>
+          <div class="col-md-2">
+            <h2> impact </h2>
+          </div>
+          <div class="col-md-6">
+            <p> The City of Boston's digital team <a href="https://www.boston.gov/news/designing-violation-envelope-thats-easier-understand" target="_blank"> launched a pilot</a> of our recommendations in August 2019. After finding an increase in ticket payments with the new envelopes, they made further iterations and launched the changes city-wide. </p>
+          </div>
+          <div class="col"></div>
+        </div>
+
+
+
 
     <div class="row  description_section">
       <div class="col"></div>
@@ -218,17 +231,6 @@
     </div>
 
 
-
-    <div class="row description_section">
-      <div class="col"></div>
-      <div class="col-md-2">
-        <h2> learnings </h2>
-      </div>
-      <div class="col-md-6">
-        <p> This project was a careful balance between practical solutions and big-picture systems thinking. Balancing the needs of the client while keeping the end user in mind was a rewarding challenge.</p>
-      </div>
-      <div class="col"></div>
-    </div>
 
 
 
