--- a/photography.html
+++ b/photography.html
@@ -96,7 +96,7 @@
       <div class="col-md-3  "  >
         <img src="img/photos/candles.jpg" alt="set of candles in blue  s" class="art_image">
 
-             <div class="image_caption art_caption"> new hampshire <br> 2017 </div>
+             <div class="image_caption art_caption"> white mountains <br> new hampshire <br> 2017 </div>
 
       </div>
 
@@ -152,7 +152,7 @@
       <div class="col-md-6  "  >
         <img src="img/photos/beach.JPG" alt="a widescreen stormy beach with a hut" class="art_image">
 
-             <div class="image_caption art_caption"> namua samoa <br> 2017 </div>
+             <div class="image_caption art_caption"> namua <br> samoa <br> 2017 </div>
 
       </div>
 
@@ -160,7 +160,7 @@
       <div class="col-md-6  "  >
         <img src="img/photos/decay.JPG" alt="a rusting piece of metal with the ocean in the background" class="art_image">
 
-             <div class="image_caption art_caption"> san salvador bahamas <br> 2015 </div>
+             <div class="image_caption art_caption"> san salvador <br> bahamas <br> 2015 </div>
 
       </div>
     </div>
