--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h1>Elyse Voegeli</h1>
 
 
-            <p>I am a designer and data analyst committed to making tech accessible, accountable, and delightful. (she, her) </p>
+            <p>I am a designer and data analyst committed to making tech accessible, accountable, and delightful. My pronouns are she, her, hers. </p>
         <p> In my free time, I enjoy taking care of my 77 pandemic plants, reading queer fantasy novels, and making cat puns. I apawlogize in advance.</p>
         <p class="icon_link"> <a href="https://github.com/evoeges" target="_blank"><i data-feather="github" aria-label="Link to Elyse's Github"></i></a>&nbsp;&nbsp;&nbsp;
         <a href="https://www.linkedin.com/in/elyse-voegeli-037781124/" target="_blank"><i data-feather="linkedin" aria-label="Link to Elyse's LinkedIn"></i></a>
