added data capitalism page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       <!--  <h2 class="index_list"><a href="10K.html">Data Capitalism</a></h2>
         <p> <em>user-friendly and accessible microsite for Data 4 Black Lives</em></p>
         <p class="tags">  user research + UI/UX design + illustration + development</p> -->
+        <h2 class="index_list"><a href="dataCapitalism.html">Data Capitalism</a></h2>
+        <p><em>visual, readable microsite for Data for Black Lives </em></p>
+        <p class="tags"> UI/UX design + user research + visual design </p>
         <h2 class="index_list"><a href="10KTablets.html">10K Tablets</a></h2>
         <p><em>data and design to bring older adults online </em></p>
         <p class="tags">  user research + service design + UI/UX design + data viz</p>
@@ -68,9 +71,9 @@
         <p><em> new developer guide for a free and open source medical record system</em> </p>
         <p class="tags"> user research + documentation</p>
       <!--  <h2><a href="ceramics.html">ceramics</a></h2>
-        <p><em>just for fun</em><p> -->
+        <p><em>just for fun</em><p>
         <h2><a href="photography.html">photography</a></h2>
-        <p><em>just for fun. only a couple of cats</em><p>
+        <p><em>just for fun. only a couple of cats</em><p> -->
         </div>
 
       </div>
