updated data capitalism

--- a/DataCapitalism.html
+++ b/DataCapitalism.html
@@ -88,7 +88,7 @@
       </div>
       <div class="col-md-6">
 
-          <p> The microsite we created is much more than a digital version of the Data Capitalism report. Rather, it presents the key learnings from the report through narrative. The intention of the microsite is to reach a different user base than those who might read an academic report. As such, we focused our work on simplicity, readability, and accessibility and made the microsite short and visually engaging. </p>  </div>
+          <p> The microsite we created is much more than a digital version of the Data Capitalism report. Rather, it presents the key learnings from the report through narrative. The intention of the microsite is to reach a different user base than those who might read an academic report. As such, we focused our work on simplicity, readability, and accessibility and made the microsite short and visually engaging. The site scores well on a Flesch-Kincaid readability test, and registers at about the 9th grade reading level.</p>  </div>
       <div class="col"></div>
     </div>
 
