--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <!--  <h2 class="index_list"><a href="10K.html">Data Capitalism</a></h2>
         <p> <em>user-friendly and accessible microsite for Data 4 Black Lives</em></p>
         <p class="tags">  user research + UI/UX design + illustration + development</p> -->
-        <h2 class="index_list"><a href="dataCapitalism.html">Data Capitalism</a></h2>
+        <h2 class="index_list"><a href="dataCapitalismD4BL.html">Data Capitalism</a></h2>
         <p><em>visual, readable microsite for Data for Black Lives </em></p>
         <p class="tags"> UI/UX design + user research + visual design </p>
         <h2 class="index_list"><a href="10KTablets.html">10K Tablets</a></h2>
