updated image for data capitalism

--- a/dataCapitalismD4BL.html
+++ b/dataCapitalismD4BL.html
@@ -47,7 +47,7 @@
         <div class="col-md-4"></div>
         <div class="col-md-6">
 
-          <img src="img/DataCapitalismHero.jpg" class="body_images_horizontal" alt="a screenshot of a landing page which says 'Data Capitalism, the fight begins here'. The silhouette of a Black woman looks forward as digital images move through the background.">
+          <img src="img/DataCapitalismHero.JPG" class="body_images_horizontal" alt="a screenshot of a landing page which says 'Data Capitalism, the fight begins here'. The silhouette of a Black woman looks forward as digital images move through the background.">
           <p class="image_caption">Screencap of the landing page.</p>
 
         </div>
